1. Fix spurious 'new message for you' messages if things are deleted but 
unread.
2. stop remote passive nodes (those with version numbers of 0000) from
poluting the nodes table. Maybe this will make things slightly more stable.
3. Take off rspf checks on announces and spots and allow the dupe filters
to take the strain.
4. Move the dupe checking AFTER the input filtering for announces and spots.
26Nov01=======================================================================
1. Make changes to the installation manual to show making the client before
actually trying to use it!  Thanks to oz1lqh.  Also add a line for SuSE
distros on useradd.
22Nov01=======================================================================
1. finally fix DELETE = ^H = Backspace in console.pl
21Nov01=======================================================================
1. altered the PC16/17 generation slightly to see whether this cures Roland's
problem.
19Nov01=======================================================================
1. added Ducie Island to prefixes
17Nov01=======================================================================
1. updated the Java Web Interface from Ian, m0azm to allow passwords.  If
a user with no password enters anything, including null, it is happily
accepted and ignored.
2. added the German language to the Messages file from Stephan, dk8lv
14Nov01=======================================================================
1. make the number of characters of the dx comment dependant on the type of
connection. This should mean that 'legacy' user programs can cope.
2. move the handling of unprintable characters out of IntMsg
07Nov01=======================================================================
1. fix is_pctext so that it actually catches corrupt spots and announces.
2. fix console.pl so that you can type in '0' again
3. Fix problem with reply disappearing up its own bottom.
4. Added Steve's latest sh/moon stuff